tests/snapshots/flow_demo__flow_get_users_by_id_renders_expected_mermaid_flowchart.snap
---
source: tests/flow_demo.rs
expression: stdout
---
```mermaid
flowchart TD
    n0[["UserController#findById(Long)"]]
    n1[["UserService#findById(Long)"]]
    n0 --> n1
    n2[["UserService#findUserOrThrow(Long)"]]
    n1 --> n2
    n3{{"Optional#orElseThrow(Supplier) - control flow (Optional)"}}
    n4(["UserRepository#findById(Long) - external (Spring Data JPA)"])
    n2 --> n4
    n4 -->|"input"| n3
    n5{"optional"}
    n3 --> n5
    n6["lambda: () -> new BusinessException(ErrorCode.USER_NOT_FOUND)"]
    n5 -->|"empty terminates"| n6
    n7[["BusinessException#<init>(ErrorCode)"]]
    n6 --> n7
    n8[["ErrorCode#getDefaultMessage()"]]
    n7 --> n8
    n9(["terminates"])
    n8 -->|"terminates"| n9
    n10[["UserService#toResponse(User)"]]
    n5 --> n10
    n11[["UserResponse#<init>(Long, String, String, Integer, Boolean)"]]
    n12[["User#getId()"]]
    n10 --> n12
    n12 -->|"input"| n11
    n13[["User#getName()"]]
    n10 --> n13
    n13 -->|"input"| n11
    n14[["User#getEmail()"]]
    n10 --> n14
    n14 -->|"input"| n11
    n15[["User#getAge()"]]
    n10 --> n15
    n15 -->|"input"| n11
    n16[["User#getActive()"]]
    n10 --> n16
    n16 -->|"input"| n11
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
```
