tests/snapshots/flow_demo__flow_get_users_renders_expected_mermaid.snap
---
source: tests/flow_demo.rs
expression: stdout
---
```mermaid
sequenceDiagram
    participant UserController
    participant UserService
    participant Stream
    participant UserRepository
    participant UserResponse
    participant User
    UserController->>UserService: findAll()
    UserService->>UserRepository: findAll()
    Note over UserRepository: external (Spring Data JPA)
    UserService->>Stream: map(Function)
    Note over Stream: control flow (traversal)
    loop stream Stream.map (0..n)
    Stream->>UserService: toResponse(User)
    UserService->>User: getId()
    UserService->>User: getName()
    UserService->>User: getEmail()
    UserService->>User: getAge()
    UserService->>User: getActive()
    UserService->>UserResponse: <init>(...)
    end
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
    %% - Return arrows are not rendered: CallNode does not yet track return types.
```
