tests/snapshots/flow_demo__flow_post_users_renders_expected_json.snap
---
source: tests/flow_demo.rs
expression: stdout
---
{
  "endpoint": {
    "verb": "POST",
    "path": "/users"
  },
  "controller": {
    "method": "com.example.demo.controller.UserController#create(CreateUserRequest)",
    "file": "demo-api/demo/src/main/java/com/example/demo/controller/UserController.java",
    "line": LINE
  },
  "inputs": [
    {
      "name": "request",
      "type": "CreateUserRequest",
      "source": "body"
    }
  ],
  "call_sequence": [
    {
      "type": "call",
      "method": "com.example.demo.service.UserService#create(CreateUserRequest)",
      "confidence": "resolved",
      "calls": [
        {
          "type": "call",
          "method": "com.example.demo.dto.CreateUserRequest#getEmail()",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#validateEmailUniqueness(String)",
          "confidence": "resolved",
          "scope": "intra-class",
          "calls": [
            {
              "type": "call",
              "method": "com.example.demo.util.Normalizers#normalizeEmail(String)",
              "confidence": "resolved",
              "calls": [
                {
                  "type": "branch",
                  "kind": "if",
                  "condition_src": "email == null",
                  "arms": [
                    {
                      "label": "then",
                      "terminates": true,
                      "children": []
                    }
                  ]
                },
                {
                  "type": "call",
                  "method": "String#trim()",
                  "confidence": "external",
                  "external_kind": "jdk",
                  "calls": []
                },
                {
                  "type": "call",
                  "method": "String#toLowerCase()",
                  "confidence": "external",
                  "external_kind": "jdk",
                  "calls": []
                }
              ]
            },
            {
              "type": "call",
              "method": "com.example.demo.repository.UserRepository#existsByEmail(String)",
              "confidence": "external",
              "external_kind": "spring-data",
              "calls": []
            },
            {
              "type": "branch",
              "kind": "if",
              "condition_src": "repository.existsByEmail(normalized)",
              "arms": [
                {
                  "label": "then",
                  "terminates": true,
                  "children": [
                    {
                      "type": "call",
                      "method": "com.example.demo.exception.BusinessException#<init>(ErrorCode)",
                      "confidence": "resolved",
                      "calls": [
                        {
                          "type": "call",
                          "method": "Unknown#getDefaultMessage()",
                          "confidence": "unresolved",
                          "calls": []
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        },
        {
          "type": "call",
          "method": "com.example.demo.dto.CreateUserRequest#getAge()",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "branch",
          "kind": "if",
          "condition_src": "request.getAge() < 18",
          "arms": [
            {
              "label": "then",
              "terminates": true,
              "children": [
                {
                  "type": "call",
                  "method": "com.example.demo.exception.BusinessException#<init>(ErrorCode)",
                  "confidence": "resolved",
                  "calls": [
                    {
                      "type": "call",
                      "method": "Unknown#getDefaultMessage()",
                      "confidence": "unresolved",
                      "calls": []
                    }
                  ]
                }
              ]
            }
          ]
        },
        {
          "type": "call",
          "method": "com.example.demo.dto.CreateUserRequest#getName()",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "call",
          "method": "String#trim()",
          "confidence": "external",
          "external_kind": "jdk",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.dto.CreateUserRequest#getEmail()",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.util.Normalizers#normalizeEmail(String)",
          "confidence": "resolved",
          "calls": [
            {
              "type": "branch",
              "kind": "if",
              "condition_src": "email == null",
              "arms": [
                {
                  "label": "then",
                  "terminates": true,
                  "children": []
                }
              ]
            },
            {
              "type": "call",
              "method": "String#trim()",
              "confidence": "external",
              "external_kind": "jdk",
              "calls": []
            },
            {
              "type": "call",
              "method": "String#toLowerCase()",
              "confidence": "external",
              "external_kind": "jdk",
              "calls": []
            }
          ]
        },
        {
          "type": "call",
          "method": "com.example.demo.dto.CreateUserRequest#getAge()",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.entity.User#<init>(String, String, Integer, Boolean)",
          "confidence": "resolved",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.repository.UserRepository#save(User)",
          "confidence": "external",
          "external_kind": "spring-data",
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#toResponse(User)",
          "confidence": "resolved",
          "scope": "intra-class",
          "calls": [
            {
              "type": "call",
              "method": "com.example.demo.entity.User#getId()",
              "confidence": "resolved",
              "calls": []
            },
            {
              "type": "call",
              "method": "com.example.demo.entity.User#getName()",
              "confidence": "resolved",
              "calls": []
            },
            {
              "type": "call",
              "method": "com.example.demo.entity.User#getEmail()",
              "confidence": "resolved",
              "calls": []
            },
            {
              "type": "call",
              "method": "com.example.demo.entity.User#getAge()",
              "confidence": "resolved",
              "calls": []
            },
            {
              "type": "call",
              "method": "com.example.demo.entity.User#getActive()",
              "confidence": "resolved",
              "calls": []
            },
            {
              "type": "call",
              "method": "com.example.demo.dto.UserResponse#<init>(Long, String, String, Integer, Boolean)",
              "confidence": "resolved",
              "calls": []
            }
          ]
        }
      ]
    }
  ],
  "unresolved": [
    {
      "receiver_type": "unknown",
      "method_name": "getDefaultMessage",
      "reason": "could not determine receiver at line 12"
    },
    {
      "receiver_type": "unknown",
      "method_name": "getDefaultMessage",
      "reason": "could not determine receiver at line 12"
    }
  ],
  "notes": [
    "Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.",
    "Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.",
    "Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.",
    "AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled."
  ]
}
