tests/snapshots/flow_demo__flow_post_users_renders_expected_mermaid_flowchart.snap
---
source: tests/flow_demo.rs
expression: stdout
---
```mermaid
flowchart TD
    n0[["UserController#create(CreateUserRequest)"]]
    n1[["UserService#create(CreateUserRequest)"]]
    n0 --> n1
    n2[["UserService#validateEmailUniqueness(String)"]]
    n3[["CreateUserRequest#getEmail()"]]
    n1 --> n3
    n3 -->|"input"| n2
    n4[["Normalizers#normalizeEmail(String)"]]
    n2 --> n4
    n5{"if email == null"}
    n4 --> n5
    n6(["terminates"])
    n5 -->|"then terminates"| n6
    n7{"if repository.existsByEmail(normalized)"}
    n8(["UserRepository#existsByEmail(String) - external (Spring Data JPA)"])
    n5 --> n8
    n8 -->|"condition"| n7
    n9[["BusinessException#<init>(ErrorCode)"]]
    n7 -->|"then terminates"| n9
    n10[["ErrorCode#getDefaultMessage()"]]
    n9 --> n10
    n11(["terminates"])
    n10 -->|"terminates"| n11
    n12{"if request.getAge() < 18"}
    n13[["CreateUserRequest#getAge()"]]
    n7 --> n13
    n13 -->|"condition"| n12
    n14[["BusinessException#<init>(ErrorCode)"]]
    n12 -->|"then terminates"| n14
    n15[["ErrorCode#getDefaultMessage()"]]
    n14 --> n15
    n16(["terminates"])
    n15 -->|"terminates"| n16
    n17[["User#<init>(String, String, Integer, Boolean)"]]
    n18[["CreateUserRequest#getName()"]]
    n12 --> n18
    n18 -->|"input"| n17
    n19[["Normalizers#normalizeEmail(String)"]]
    n20[["CreateUserRequest#getEmail()"]]
    n12 --> n20
    n20 -->|"input"| n19
    n21{"if email == null"}
    n19 --> n21
    n22(["terminates"])
    n21 -->|"then terminates"| n22
    n21 -->|"input"| n17
    n23[["CreateUserRequest#getAge()"]]
    n12 --> n23
    n23 -->|"input"| n17
    n24(["UserRepository#save(User) - external (Spring Data JPA)"])
    n17 --> n24
    n25[["UserService#toResponse(User)"]]
    n24 --> n25
    n26[["UserResponse#<init>(Long, String, String, Integer, Boolean)"]]
    n27[["User#getId()"]]
    n25 --> n27
    n27 -->|"input"| n26
    n28[["User#getName()"]]
    n25 --> n28
    n28 -->|"input"| n26
    n29[["User#getEmail()"]]
    n25 --> n29
    n29 -->|"input"| n26
    n30[["User#getAge()"]]
    n25 --> n30
    n30 -->|"input"| n26
    n31[["User#getActive()"]]
    n25 --> n31
    n31 -->|"input"| n26
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
```
